Moving kie-services-remote tests to kie-services-tests